{
    "name": "BatControls",
    "maps": [
        {
            "name": "BatMap",
            "id": "e23f9db6-3dc2-40f8-9ff8-f01cb996f062",
            "actions": [
                {
                    "name": "Finger1",
                    "type": "Value",
                    "id": "b89d61cb-5ffc-4ef1-99e7-e4475b23f052",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FlyLeft",
                    "type": "Button",
                    "id": "c9369a50-7583-408b-931b-c7c379a8a694",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FlyRight",
                    "type": "Button",
                    "id": "bf8c6a68-93cf-43ec-b79c-143cd1a443a0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "bd2ad439-46e0-4ed8-b9fc-d9717631cf78",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8bd03b6f-edee-4e36-90f7-1ce2769b9c07",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19ee82d0-e22c-44f6-831f-a9b38eecb7b6",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FlyLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dfb4711a-dc32-4444-98f1-342a3d56a3b8",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FlyLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd16e725-de27-4304-b78a-1fa6935cce64",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FlyRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1fb5ec9-23f9-409a-9164-da98a34d9ba4",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FlyRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dbc4a5f6-c483-4bfa-a8ec-3ac30646fab1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe89f8f2-69fb-43f0-ad74-647c8d5c2ce6",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}